# fustapi

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  QWEN.md  README.md  build.rs  config.example.toml  design_system.md  install.sh
.agents/rules/: fustapi-rule.md
.github/workflows/: ci.yml  release.yml
.planning/phases/01-foundation/: 01-02-SUMMARY.md  01-03-SUMMARY.md
.superpowers/brainstorm/48845-1777462734/content/: control-plane-direction.html
.superpowers/brainstorm/48845-1777462734/state/: server-stopped
docs/: deployment.md  ui-design-system.md
docs/specs/: design.md  phase-07-integration-summary.md  user-manual.md
docs/superpowers/plans/: 2026-05-11-providers-ui-redesign.md  2026-06-16-responses-api.md
docs/superpowers/specs/: 2026-05-10-glassmorphism-ui-redesign.md  2026-05-10-providers-ui-redesign.md  2026-05-10-ui-information-architecture-redesign.md  2026-06-16-responses-api-design.md
src/: config.rs  lib.rs  main.rs  server.rs  types.rs  web.rs
src/capability/: image.rs  mod.rs  pipeline.rs  tool.rs  transform.rs
src/config/: db.rs
src/metrics/: aggregator.rs  counters.rs  guard.rs  mod.rs  snapshot.rs
src/protocol/: anthropic.rs  mod.rs  openai.rs  responses.rs  serializer.rs  stream_dispatch.rs
src/provider/: health.rs  lmstudio.rs  mod.rs  omlx.rs  sglang.rs
src/provider/cloud/: deepseek.rs  glm.rs  health_prober.rs  mod.rs  openai.rs  sse_parser.rs
src/router/: mod.rs
src/streaming/: mod.rs  sse.rs
test_data/: fustapi.db
tests/: api_tests.rs
ui/: index.html
