[package]
name = "fustapi"
version = "1.2.17"
edition = "2024"
description = "Local-first, high-performance LLM API aggregation gateway"
license = "Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-stream = "0.1"

# HTTP framework (tokio-native, lighter than actix-web)
axum = { version = "0.8", features = ["json", "query"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Streaming utilities
futures = "0.3"

# Async trait support for Provider trait
async-trait = "0.1"

# Error handling
thiserror = "2"

# Cross-platform home directory resolution
dirs = "6"

# HTTP client for provider adapters
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# In-memory config with atomic swaps (control plane → data plane)
arc-swap = "1.7"

# SQLite for control plane storage (providers, routes, metrics)
rusqlite = { version = "0.37", features = ["bundled"] }
bytes = "1.11.1"
tokio-util = "0.7.18"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
